--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,15 @@
   a {
     @apply text-primary-500 hover:text-primary-600 transition-colors duration-200;
   }
+
+  a[href],
+  button:not(:disabled) {
+    cursor: pointer;
+  }
+
+  button:disabled {
+    cursor: not-allowed;
+  }
 }
 
 @layer components {
